fix: Adjust timeline item styles for consistent input sizing and remove overflow property

--- a/frontend/sass/utils/_academic.sass
+++ b/frontend/sass/utils/_academic.sass
@@ -6,15 +6,17 @@
     
     .timeline-item
         z-index: 1
+        inline-size: 100%
+
+        input[type = "range"].timeline-input
+            inline-size: 100%
 
     .timeline-active
         opacity: 1 !important
-        
 
     .timeline-content
         opacity: 0
         padding: 1em
-        overflow: hidden
         block-size: 100%
         max-inline-size: 22em
         @include mix.transitions(opacity, 10s, ease-out)
